<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/cards"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tarefa"
                    android:textAppearance="@style/normalMedio"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/txtNomeTarefa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/NomeTarefa"
                    android:textColor="@color/primaryTextColor"
                    android:textAppearance="@style/boldMedio"
                    android:padding="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DataEntrega"
                    android:textAppearance="@style/normalMedio"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/txtDataTarefa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/DataEntrega"
                    android:textColor="@color/primaryTextColor"
                    android:textAppearance="@style/boldMedio"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Descricao"
                    android:textAppearance="@style/normalMedio"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/txtDescTarefa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Descricao"
                    android:textColor="@color/primaryTextColor"
                    android:textAppearance="@style/normalPequeno"
                    android:padding="5dp"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>